# meshchain

./: .gitignore  .vercelignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.md.bak  docker-compose.yml  fix_mesh_main.py  package-lock.json  package.json  patch.diff  vercel.json
.github/workflows/: ci.yml  scanner-snapshot.yml  seed-health.yml
.grok/plugins/meshchain/: plugin.json
.grok/plugins/meshchain/commands/: mesh-e2e.md  mesh-scanner.md  mesh-status.md
.grok/plugins/meshchain/skills/meshchain-scanner/: SKILL.md
.grok/plugins/meshchain/skills/meshchain-testnet/: SKILL.md
crates/ledger/: Cargo.toml
crates/ledger/src/: error.rs  genesis.rs  lib.rs  registry.rs  state.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: config.rs  helpers.rs  main.rs
crates/mesh/src/cmd/: doctor.rs  info.rs  mod.rs  monitor.rs  network.rs  radio.rs  scanner.rs  wallet.rs
crates/node/: Cargo.toml
crates/node/src/: consensus.rs  main.rs  mempool.rs  net.rs  run.rs  sim.rs  sync_validate.rs
crates/proto/: Cargo.toml
crates/proto/src/: address.rs  block.rs  crypto.rs  error.rs  lib.rs  pq.rs  privacy.rs  tx.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: auth.rs  http.rs  main.rs  model.rs  ui.rs
crates/transport/: Cargo.toml
crates/transport/src/: frag.rs  frame.rs  lib.rs  meshtastic.rs  native_proto.rs  sim.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: main.rs
deploy/: cloud-init.yaml  gce-create.sh  gce-observer-setup.sh  meshchain-radio-relay.service  meshchain-testnet.service  radio-relay.env.example  remote-bind-public.sh  setup-https-sslip.sh  testnet.env.example  vps-setup.sh
docs/: AUDIT_AND_TEST.md  CLOUD.md  DISCORD.md  GETTING_STARTED.md  HOST_OPS.md  MESHTASTIC.md  MULTI_OPERATOR.md  MULTI_VALIDATOR.md  PROTOCOL.md  RUN_A_NODE.md  SCANNER_AUTO_UPDATE.md  SECURITY.md  STATUS.md  TESTNET.md  VPS_PUBLIC.md
firmware-module/: BincodeTx.h  CryptoEngine.cpp  CryptoEngine.h  MeshchainModule.cpp  MeshchainModule.h  README.md  ed25519_tiny.cpp  ed25519_tiny.h  test_bincode  test_bincode.cpp
marketing/: CAMPAIGN.md  README.md
marketing/copy/: hooks.md  press-kit.md  social-calendar.md
marketing/creatives/: ads.html
programs-mesh-bridge/: Anchor.toml
programs-mesh-bridge/programs/programs-mesh-bridge/: Cargo.toml
programs-mesh-bridge/programs/programs-mesh-bridge/src/: lib.rs
programs-mesh-bridge/scripts/: e2e_cashout.ts  e2e_vault_to_mesh.ts  initialize_devnet.ts  relayer_daemon.ts
programs-mesh-bridge/tests/: programs-mesh-bridge.ts
scripts/: backfill_block_archive.sh  e2e_air_path.sh  e2e_multi_node.sh  e2e_vault_to_mesh.ts  genesis_add_validators.py  genesis_add_validators.sh  host_bootstrap.sh  join_public_testnet.sh  mesh-validator  meshtastic_hardware_test.sh  publish_wiki.sh  relayer_daemon.ts  restack_public_seed.sh  run_local_validators.sh  start_public_tunnel.sh  start_radio_relay.sh  start_scanner_live.sh  start_testnet_host.sh  status_public_seed.sh  stop_public_tunnel.sh  stop_scanner_live.sh  stop_testnet_host.sh  sync_scanner_snapshot.sh  test_public_e2e.sh
services/faucet/: faucet_server.py
testnet/: SOLANA_DEVNET.md  attestors.json  network.json  operator_application.example.json  seeds.example.json
testnet/published/: README.md
tools/: mesh_radio_relay.py  meshtastic_bridge.py  relayer.py
validator-automation/: README.md  mesh-validator
validator-automation/config/: host.env.example  lab.env  lab.env.example
validator-automation/lib/: common.sh
validator-automation/systemd/: meshchain-validators.service  meshchain-watchdog.service  meshchain-watchdog.timer
web/: faucet.html  index.html  styles.css  vercel.json
web/content/: AUDIT_AND_TEST.md  BTC_VAULT.md  DONATE.md  E2E_TESTNET.md  GETTING_STARTED.md  HARDWARE.md  HYBRID_LOCK.md  MULTI_OPERATOR.md  MULTI_VALIDATOR.md  PROTOCOL.md  QUANTUM_COLD_STORAGE.md  RUN_A_NODE.md  SCANNER.md  SCANNER_AUTO_UPDATE.md  SECURITY_HARDENING.md  SOLANA_BRIDGE.md  SOLANA_DEVNET.md  TRUTH_MODEL.md  VPS_PUBLIC.md
web/docs/: docs.js  index.html
web/faucet/: index.html
web/scanner/: index.html
web/scanner/data/: chain_state.json  config.json  meta.json  network.json
web/scanner/js/: app.js  meshname.js
web/testnet/: attestors.json  network.json
web/testnet/published/: genesis.json  seeds.json
