[workspace]
resolver = "2"
members = [
    "crates/proto",
    "crates/ledger",
    "crates/node",
    "crates/wallet",
    "crates/transport",
    "crates/mesh",
    "crates/scanner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["MeshChain"]

[workspace.dependencies]
meshchain-proto = { path = "crates/proto" }
meshchain-ledger = { path = "crates/ledger" }
meshchain-transport = { path = "crates/transport" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
fips204 = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
hex = "0.4"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
tempfile = "3"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
debug = 1           # line tables only — faster builds, still useful in backtraces
