[package]
name = "mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Simple MeshChain CLI — plain English, no UI required"

[[bin]]
name = "mesh"
path = "src/main.rs"

[dependencies]
meshchain-proto = { workspace = true }
meshchain-ledger = { workspace = true }
meshchain-transport = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
