[package]
name = "meshchain-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MeshChain protocol types, codecs, and cryptography"

[dependencies]
ed25519-dalek = { workspace = true }
fips204 = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
