[package]
name = "meshchain-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MeshChain CLI wallet (hold + spend)"

[[bin]]
name = "meshchain-wallet"
path = "src/main.rs"

[dependencies]
meshchain-proto = { workspace = true }
meshchain-ledger = { workspace = true }
meshchain-transport = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
